--- a/examples/introduction/index.html
+++ b/examples/introduction/index.html
@@ -298,6 +298,36 @@ provides you some tools to customize your API responses.</p>
 
 
 <p>You can find advanced examples in the <a href="https://github.com/fabrik42/acts_as_api/wiki/">Github Wiki</a></p>
+      </td>
+      <td class=code>
+        <div class='highlight'><pre></pre></div>
+      </td>
+    </tr>
+    <tr id='section-19'>
+      <td class=docs>
+        <div class="pilwrap">
+          <a class="pilcrow" href="#section-19">&#182;</a>
+        </div>
+        <hr />
+      </td>
+      <td class=code>
+        <div class='highlight'><pre></pre></div>
+      </td>
+    </tr>
+    <tr id='section-Links'>
+      <td class=docs>
+        <div class="pilwrap">
+          <a class="pilcrow" href="#section-Links">&#182;</a>
+        </div>
+        <h2>Links</h2>
+
+<ul>
+<li>Check out the <a href="https://github.com/fabrik42/acts_as_api/">source code on Github</a></li>
+<li>For more usage examples visit the <a href="https://github.com/fabrik42/acts_as_api/wiki/">wiki</a></li>
+<li>Found a bug or do you have a feature request? <a href="https://github.com/fabrik42/acts_as_api/issues">issue tracker</a></li>
+<li><a href="http://rdoc.info/github/fabrik42/acts_as_api">Docs</a></li>
+</ul>
+
 
       </td>
       <td class=code>
