and even more docs...

--- a/examples/introduction/index.html
+++ b/examples/introduction/index.html
@@ -287,17 +287,17 @@ provides you some tools to customize your API responses.</p>
 <p>You can do basically anything:</p>
 
 <ul>
-<li>Include attributes and all other kinds of methods of your model</li>
-<li>Include child associations (if they also act_as_api this will be considered)</li>
-<li>Include lambdas and Procs</li>
-<li>Call methods of a parent association</li>
-<li>Call scopes of your model or child associations</li>
-<li>Rename attributes, methods, associations</li>
-<li>Create your own hierarchies</li>
+<li><a href="https://github.com/fabrik42/acts_as_api/wiki/Calling-a-method-of-the-model">Include attributes and all other kinds of methods of your model</a></li>
+<li><a href="https://github.com/fabrik42/acts_as_api/wiki/Including-a-child-association">Include child associations (if they also act_as_api this will be considered)</a></li>
+<li><a href="https://github.com/fabrik42/acts_as_api/wiki/Calling-a-lambda-in-the-api-template">Include lambdas and Procs</a></li>
+<li><a href="https://github.com/fabrik42/acts_as_api/wiki/Calling-a-method-of-the-model">Call methods of a parent association</a></li>
+<li><a href="https://github.com/fabrik42/acts_as_api/wiki/Calling-a-scope-of-a-sub-resource">Call scopes of your model or child associations</a></li>
+<li><a href="https://github.com/fabrik42/acts_as_api/wiki/Renaming-an-attribute">Rename attributes, methods, associations</a></li>
+<li><a href="https://github.com/fabrik42/acts_as_api/wiki/Creating-a-completely-different-response-structure">Create your own hierarchies</a></li>
 </ul>
 
 
-<p>You can find advanced examples in the <a href="https://github.com/fabrik42/acts_as_api/wiki/">Github Wiki</a></p>
+<p>You can find more advanced examples in the <a href="https://github.com/fabrik42/acts_as_api/wiki/">Github Wiki</a></p>
       </td>
       <td class=code>
         <div class='highlight'><pre></pre></div>
