--- a/examples/introduction/index.html
+++ b/examples/introduction/index.html
@@ -58,8 +58,9 @@ You surely don’t want to expose your models always with all attributes.</p>
 <li>DRY templates for your api responses</li>
 <li>Easy but very flexible syntax for defining the templates</li>
 <li>XML, JSON and JSON-P support out of the  box, easy to extend</li>
+<li>Support for Rails 3 Responders</li>
 <li>Minimal dependecies (you can also use it without Rails)</li>
-<li>Does not rely on ActiveRecord (can be used with other ORMs like Mongoid)</li>
+<li>Ships with support for <em>ActiveRecord</em> and <em>Mongoid</em></li>
 <li>Supports multiple api rendering templates for a models. This is especially useful for API versioning or for example for private vs. public access points to a user’s profile.</li>
 </ul>
       </td>
@@ -222,49 +223,6 @@ If you only want to expose the <code>first_name</code> and <code>last_name</code
 <span class="k">end</span></pre></div>
       </td>
     </tr>
-    <tr id='section-Using_a_Responder'>
-      <td class=docs>
-        <div class="pilwrap">
-          <a class="pilcrow" href="#section-Using_a_Responder">&#182;</a>
-        </div>
-        <h3>Using a Responder</h3>
-
-<p>Alternatively, you can dry up your actions by setting the controller&rsquo;s responder to
-the <code>ActsAsApi::Responder</code> class. With this in place, you can use the built-in <code>respond_with</code> method.
-You can do this on a per-controller basis, or, you
-can create a parent class for your controllers to inherit from, as seen here.
-Note that the <code>:api_template</code> parameter is where you specify which template you&rsquo;d like to render,
-and is required on all <code>respond_with</code> calls.</p>
-      </td>
-      <td class=code>
-        <div class='highlight'><pre><span class="k">class</span> <span class="nc">ApiController</span> <span class="o">&lt;</span> <span class="no">ApplicationController</span>
-  <span class="nb">self</span><span class="o">.</span><span class="n">responder</span> <span class="o">=</span> <span class="no">ActsAsApi</span><span class="o">::</span><span class="no">Responder</span>
-  <span class="n">respond_to</span> <span class="ss">:json</span><span class="p">,</span> <span class="ss">:xml</span>
-<span class="k">end</span>
-
-<span class="k">class</span> <span class="nc">UsersController</span> <span class="o">&lt;</span> <span class="no">ApiController</span>
-
-  <span class="k">def</span> <span class="nf">index</span>
-    <span class="vi">@users</span> <span class="o">=</span> <span class="no">User</span><span class="o">.</span><span class="n">all</span>
-    <span class="n">respond_with</span> <span class="vi">@users</span><span class="p">,</span> <span class="ss">:api_template</span> <span class="o">=&gt;</span> <span class="ss">:name_only</span><span class="p">,</span> <span class="ss">:root</span> <span class="o">=&gt;</span> <span class="ss">:users</span>
-  <span class="k">end</span></pre></div>
-      </td>
-    </tr>
-    <tr id='section-15'>
-      <td class=docs>
-        <div class="pilwrap">
-          <a class="pilcrow" href="#section-15">&#182;</a>
-        </div>
-        <p>You&rsquo;re free to add additional options to the <code>respond_with</code> call, e.g., specifying a HTTP Location header.</p>
-      </td>
-      <td class=code>
-        <div class='highlight'><pre>  <span class="k">def</span> <span class="nf">show</span>
-    <span class="vi">@users</span> <span class="o">=</span> <span class="no">User</span><span class="o">.</span><span class="n">find</span><span class="p">(</span><span class="n">params</span><span class="o">[</span><span class="ss">:id</span><span class="o">]</span><span class="p">)</span>
-    <span class="n">respond_with</span> <span class="vi">@user</span><span class="p">,</span> <span class="ss">:api_template</span> <span class="o">=&gt;</span> <span class="ss">:name_only</span><span class="p">,</span> <span class="ss">:location</span> <span class="o">=&gt;</span> <span class="n">user_path</span><span class="p">(</span><span class="vi">@user</span><span class="p">)</span>
-  <span class="k">end</span>
-<span class="k">end</span></pre></div>
-      </td>
-    </tr>
     <tr id='section-That&amp;rsquo;s_it!'>
       <td class=docs>
         <div class="pilwrap">
@@ -276,10 +234,10 @@ and is required on all <code>respond_with</code> calls.</p>
         <div class='highlight'><pre></pre></div>
       </td>
     </tr>
-    <tr id='section-17'>
+    <tr id='section-15'>
       <td class=docs>
         <div class="pilwrap">
-          <a class="pilcrow" href="#section-17">&#182;</a>
+          <a class="pilcrow" href="#section-15">&#182;</a>
         </div>
         <p>Try it. The JSON response of #show should now look like this:</p>
 
@@ -295,10 +253,10 @@ because they were not listed by <code>api_accessible</code> in the model.</p>
 <span class="p">}</span></pre></div>
       </td>
     </tr>
-    <tr id='section-18'>
+    <tr id='section-16'>
       <td class=docs>
         <div class="pilwrap">
-          <a class="pilcrow" href="#section-18">&#182;</a>
+          <a class="pilcrow" href="#section-16">&#182;</a>
         </div>
         <hr />
       </td>
@@ -346,10 +304,10 @@ provides you some tools to customize your API responses.</p>
         <div class='highlight'><pre></pre></div>
       </td>
     </tr>
-    <tr id='section-21'>
+    <tr id='section-19'>
       <td class=docs>
         <div class="pilwrap">
-          <a class="pilcrow" href="#section-21">&#182;</a>
+          <a class="pilcrow" href="#section-19">&#182;</a>
         </div>
         <hr />
       </td>
