again gh-pages formattings

--- a/examples/introduction/index.html
+++ b/examples/introduction/index.html
@@ -60,7 +60,7 @@ You surely don’t want to expose your models always with all attributes.</p>
 <li>XML, JSON and JSON-P support out of the  box, easy to extend</li>
 <li>Support for Rails 3 Responders</li>
 <li>Minimal dependecies (you can also use it without Rails)</li>
-<li>Ships with support for <em>ActiveRecord</em> and <em>Mongoid</em></li>
+<li>Ships with support for <strong>ActiveRecord</strong> and <strong>Mongoid</strong></li>
 <li>Supports multiple api rendering templates for a models. This is especially useful for API versioning or for example for private vs. public access points to a user’s profile.</li>
 </ul>
       </td>
