updated gh pages site

--- a/examples/introduction/index.html
+++ b/examples/introduction/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=utf-8">
   <title>acts_as_api</title>
+  <meta content="A Ruby/Rails gem to easily generate web api reponses!" name="description" />
+  <meta content="Christian Bäuerlein" name="author" />
+  <meta content="en" name="language" />    
   <link rel="stylesheet" href="./docco.css">
   <link  href="http://fonts.googleapis.com/css?family=Copse:regular" rel="stylesheet" type="text/css" >
   <style>
@@ -56,11 +59,12 @@ You surely don’t want to expose your models always with all attributes.</p>
 
 <ul>
 <li>DRY templates for your api responses</li>
+<li>Ships with support for <strong>ActiveRecord</strong> and <strong>Mongoid</strong></li>
+<li>Support for Rails 3 Responders</li>
 <li>Easy but very flexible syntax for defining the templates</li>
 <li>XML, JSON and JSON-P support out of the  box, easy to extend</li>
-<li>Support for Rails 3 Responders</li>
+<li>Support for meta data like pagination info, etc&hellip;</li>
 <li>Minimal dependecies (you can also use it without Rails)</li>
-<li>Ships with support for <strong>ActiveRecord</strong> and <strong>Mongoid</strong></li>
 <li>Supports multiple api rendering templates for a models. This is especially useful for API versioning or for example for private vs. public access points to a user’s profile.</li>
 </ul>
       </td>
@@ -79,12 +83,12 @@ You surely don’t want to expose your models always with all attributes.</p>
         <div class='highlight'><pre></pre></div>
       </td>
     </tr>
-    <tr id='section-Rails_3.0.x_Quickstart'>
+    <tr id='section-Rails_3.x_Quickstart'>
       <td class=docs>
         <div class="pilwrap">
-          <a class="pilcrow" href="#section-Rails_3.0.x_Quickstart">&#182;</a>
+          <a class="pilcrow" href="#section-Rails_3.x_Quickstart">&#182;</a>
         </div>
-        <h2>Rails 3.0.x Quickstart</h2>
+        <h2>Rails 3.x Quickstart</h2>
       </td>
       <td class=code>
         <div class='highlight'><pre></pre></div>
