updates gem to 0.4.4

--- a/examples/introduction/index.html
+++ b/examples/introduction/index.html
@@ -5,7 +5,7 @@
   <title>acts_as_api</title>
   <meta content="A Ruby/Rails gem to easily generate web api reponses!" name="description" />
   <meta content="Christian Bäuerlein" name="author" />
-  <meta content="en" name="language" />    
+  <meta content="en" name="language" />
   <link rel="stylesheet" href="./docco.css">
   <link  href="http://fonts.googleapis.com/css?family=Copse:regular" rel="stylesheet" type="text/css" >
   <style>
@@ -20,7 +20,7 @@
     word-spacing: 0em;
     line-height: 1.2;
   }
-  </style>  
+  </style>
 </head>
 <body>
 <div id='container'>
@@ -30,7 +30,7 @@
     <tr>
       <th class=docs>
         <h1>acts_as_api</h1>
-        <p>Makes creating XML/JSON responses in Rails 3 easy and fun.</p>
+        <p>Makes creating XML/JSON responses in Rails 3, 4 and 5 easy and fun.</p>
       </th>
       <th class=code></th>
     </tr>
@@ -60,7 +60,7 @@ You surely don’t want to expose your models always with all attributes.</p>
 <ul>
 <li>DRY templates for your api responses</li>
 <li>Ships with support for <strong>ActiveRecord</strong> and <strong>Mongoid</strong></li>
-<li>Support for Rails 3 Responders</li>
+<li>Support for Rails 3/4 Responders (extracted to responders gem since Rails 5)</li>
 <li>Plays very well together with client libs like <a href="http://documentcloud.github.com/backbone">Backbone.js</a> or <a href="http://restkit.org">RestKit</a> (iOS).</li>
 <li>Easy but very flexible syntax for defining the templates</li>
 <li>XML, JSON and JSON-P support out of the  box, easy to extend</li>
@@ -81,7 +81,7 @@ You surely don’t want to expose your models always with all attributes.</p>
         <div class="pilwrap">
           <a class="pilcrow" href="#section-Rails_3.x_Quickstart">&#182;</a>
         </div>
-        <h2>Rails 3.x Quickstart</h2>
+        <h2>Rails Quickstart</h2>
       </td>
       <td class=code>
         <div class='highlight'><pre></pre></div>
